styles.css
body {
    background-color: rgb(34, 40, 49);
    margin: 0;
    position: relative;
    min-height: 100vh;
    padding: 0;
    font-family: "Noto Serif";
    overflow-x: hidden;
    color: #F1F7ED;
}

header {
    font-family: "Noto Serif", serif;
    text-align: center;
    color: #F1F7ED;
    font-size: 24px;
    font-weight: bold;
    text-shadow: 3px 3px 8px rgb(9, 39, 18);
}

header .subtitle {
    font-family: "Noto Serif", serif;
    font-size: 16px;
    height: 24px;
    color: rgb(200, 200, 200);
    font-weight: normal;
    margin: 0;
    padding-bottom: 6px;
    text-shadow: none;
    background-color: #243E36
}

nav {
    width: 100%;
    overflow: hidden;
    background-color: #333;
    align-items: center;
    padding: 8px;
}

nav a {
    float: left;
    display: block;
    color: white;
    text-align: center;
    font-size: 20px;
    text-shadow: 1px 1px 3px rgb(0, 0, 0);
    margin-left: 12px;
    padding: 14px 20px;
    text-decoration: none;
}

nav a:hover {
    background-color: #575757;
}

h1 {
    background-color: #243E36;
    height: 65px;
    margin: 0;
    padding: 16px;
}

.participants {
    margin: 0 auto;
    padding: 16px;
    text-align: center;
    display: block;
}

.participants p {
    margin: 10px 30px;
    padding: 16px;
    font-weight: 700;
    font-size: 24px;
    text-shadow: 2px 2px 6px #243E36;
    -webkit-text-stroke-width: 0.3px;
    -webkit-text-stroke-color: rgb(0, 0, 0);
    background-color: #243E36;
    border: 2px solid rgb(196, 196, 196);
    border-radius: 3px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.participants p:hover {
    transform: scale(1.01);
}

.participants p .position {
    flex: 1;
    text-align: left;
}

.participants p .name {
    flex: 2;
    text-align: center;
}

.participants p .score {
    flex: 1;
    text-align: right;
}

.participants p:nth-child(1) .position {
    color: gold;
}

.participants p:nth-child(2) .position {
    color: rgb(211, 211, 211);
}

.participants p:nth-child(3) .position {
    color: #cd7f32;
}

.participants p:nth-child(1) {
    font-size: 40px;
    background: linear-gradient(135deg, rgb(251, 255, 28), rgb(199, 163, 0));
}

.participants p:nth-child(2) {
    font-size: 34px;
    background: linear-gradient(135deg, silver, rgb(100, 100, 100));
}

.participants p:nth-child(3) {
    font-size: 30px;
    background: linear-gradient(135deg, #d4a237, #8f561d);
}

.tab {
    position: relative;
}

.tab input {
    position: absolute;
    opacity: 0;
    z-index: -1;
}

.tab__content {
    max-height: 0;
    overflow-y: auto;
    transition: all 0.35s;
    background-color: rgb(44, 52, 60);
    padding: 0;
    border-top: 1px solid rgba(255, 255, 255, 0.1);
}

.tab input:checked ~ .tab__content {
    max-height: 400px;
}

.accordion {
    color: var(--theme);
    border: 2px solid;
    border-radius: 0.5rem;
    overflow: hidden;
}

.tab__label,
.tab__close {
    display: flex;
    color: white;
    background: var(--theme);
    cursor: pointer;
}

.tab__label {
    justify-content: space-between;
    padding: 1rem;
}

.tab__label::after {
    content: "\276F";
    width: 1em;
    height: 1em;
    text-align: center;
    transform: rotate(90deg);
    transition: all 0.35s;
}

.tab input:checked + .tab__label::after {
    transform: rotate(270deg);
}

.tab__content p {
    margin: 0;
    padding: 1rem;
}

.tab__close {
    justify-content: flex-end;
    padding: 0.5rem 1rem;
    font-size: 0.75rem;
}

.add-event-btn {
    position: fixed;
    bottom: 20px;
    right: 20px;
    font-size: 16px;
    margin-right: 12px;
    padding: 20px 26px;
    font-weight: bold;
    color: white;
    background-color: #243E36;
    border: none;
    cursor: pointer;
    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
    transition: background-color 0.3s, transform 0.2s;
    z-index: 1000;
}

.add-event-btn:hover {
    background-color: #3e694b;
}
footer {
    background-color: #333;
    color: #fff;
    text-align: center;
    position: fixed;
    bottom: 0;
    width: 100%;
    height: 2.5rem;
}
p .about{
    padding: 20px;
    font-size: 24px;
}

